# uvmac

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.indev  CMakePresets.json  Makefile  README.md  build.sh  meson.build  vcpkg-configuration.json  vcpkg.json
_work/: VIAEMDEV.c  target_options.h
cfg/: CNFGGLOB.h  CNFGRAPI.h  CNFGRAPI.in  EMCONFIG.h  MACII.h  MACII.h.bak  MACPLUS.h  STRCONST.h
docs/: a_var.html  a_var_d.html  a_vara.html  a_vara_d.html  a_vart.html  about.html  alpha.html  branch.html  build.html  contents.html  control.html  credits.html  develop.html  dnld_128.html  dnld_mii.html  dnld_std.html  download.html  faq.html  hardware.html  index.html  license.html  o_dl_128.html  o_dl_mii.html  o_dl_std.html  old.html  options.html  osx_note.html  ports.html  setupcfg.html  sit_alt.html  sp_code.html  start.html  use.html  var_dir.html  var_serv.html  vara_dir.html  vara_srv.html  vart_srv.html
docs/appc/: index.html
docs/change/: index.html  v3.0.html  v3.1.html  v3.2.html  v3.3.html  v3.4.html  v3.5.html  v36.html  v37.html
docs/extras/: index.html
docs/extras/aspack/: index.html
docs/extras/asunpack/: index.html
docs/extras/autoquit/: index.html
docs/extras/autquit7/: index.html
docs/extras/binunpk/: index.html
docs/extras/blanks/: index.html
docs/extras/clipin/: index.html
docs/extras/clipout/: index.html
docs/extras/clockfix/: index.html
docs/extras/cnvtdc42/: index.html
docs/extras/copyroms/: index.html
docs/extras/dafkey/: index.html
docs/extras/daopener/: index.html
docs/extras/dc42chk/: index.html
docs/extras/dolaunch/: index.html
docs/extras/egretrom/: index.html
docs/extras/ejctquit/: index.html
docs/extras/exportfl/: index.html
docs/extras/exportps/: index.html
docs/extras/fdisasm/: index.html
docs/extras/findcode/: index.html
docs/extras/findres/: index.html
docs/extras/getpram/: index.html
docs/extras/getrsfrk/: index.html
docs/extras/icon2/: index.html
docs/extras/icons/: index.html
docs/extras/importfl/: index.html
docs/extras/makekeys/: index.html
docs/extras/makerand/: index.html
docs/extras/md5fl/: index.html
docs/extras/md5im/: index.html
docs/extras/mkkeystl/: index.html
docs/extras/mnvmreg/: index.html
docs/extras/mpwextns/: index.html
docs/extras/pmakkeys/: index.html
docs/extras/pmurom/: index.html
docs/extras/psgcheck/: index.html
docs/extras/psgchktl/: index.html
docs/extras/psgwrite/: index.html
docs/extras/reasm/: index.html
docs/extras/setftype/: index.html
docs/extras/sigcheck/: index.html
docs/extras/sigchktl/: index.html
docs/extras/sigwrite/: index.html
docs/extras/sigwrttl/: index.html
docs/extras/sitpack/: index.html
docs/extras/slotrom/: index.html
docs/extras/testmnvm/: index.html
docs/extras/testsync/: index.html
docs/local/: catalan.html  czech.html  dutch.html  english.html  french.html  german.html  index.html  italian.html  polish.html  pt_BR.html  spanish.html  sr_cyrl.html  sr_latn.html
docs/recipes/: index.html
docs/recipes/brsys7in/: index.html  p2.html  p3.html  p4.html
docs/recipes/brsys7ut/: index.html  p2.html  p3.html  p4.html
docs/recipes/lnrphntm/: index.html  p2.html  p3.html  p4.html
docs/recipes/sys6util/: index.html  p2.html  p3.html  p4.html
docs/recipes/sys7inst/: index.html  p2.html  p3.html  p4.html
docs/recipes/sys7tnin/: index.html  p2.html  p3.html  p4.html
docs/said/: index.html
docs/screens/: index.html  more.html
docs/var/: mnvm0159.html
extras/: trans.txt
lib/M68K/: m68k.h  m68kconf.h  m68kcpu.c  m68kfpu.c  m68kgdb.c  m68khooks.c  m68kops.c
rsrc/HAPPYMAC/: cheese.xbm  horror.xbm  pirate.xbm  sleepy.xbm  surprise.xbm  tongue.xbm  zombie.xbm
rsrc/WIN32/: app.manifest  main.aps  main.rc
setup/: BLDUTIL3.c  BLDUTIL3.i  BLDUTIL4.c  CONFIGUR.i  COREDEFS.h  GNBLDOPT.c  GNBLDOPT.i  SPBLDOPT.c  SPCNFGAP.c  SPCNFGAP.i  SPCNFGGL.c  SPCNFGGL.i  SPFILDEF.c  SPOTHRCF.c  SPOTHRCF.i  USFILDEF.c  WRBGCFLS.i  WRCNFGAP.c  WRCNFGAP.i  WRCNFGGL.c  WRMACRES.c  WRMPLIST.c  WRTEXTFL.c  config.h  tool.c
setup/config/: defaults.h  options.h
setup/makefiles/: gcc.c  gcc.h  makefiles.h
setup/utilities/: CMDARGT1.c  STRUTILS.c
src/: ADBEMDEV.c  ADBSHARE.h  ALTKEYSM.c  ALTKEYSM.h  ASCEMDEV.c  ASCEMDEV.h  BPFILTER.h  CFGMAN.c  CFGMAN.h  COMOSGLU.h  CONTROLM.h  DATE2SEC.h  DISAM68K.c  ENDIANAC.h  ERRCODES.h  FPCPEMDV.h  FPMATHEM.h  GLOBGLUE.c  GLOBGLUE.h  HPMCHACK.h  INTLCHAR.h  IWMEMDEV.c  IWMEMDEV.h  KBRDEMDV.c  M68KITAB.c  MINEM68K.c  MOUSEMDV.c  MYOSGLUE.h  OSGLUCCO.m  OSGLUGTK.c  OSGLUMAC.c  OSGLUNDS.c  OSGLUOSX.c  OSGLUSD2.c  OSGLUSDL.c  OSGLUWIN.c  OSGLUXWN.c  PBUFSTDC.h  PMUEMDEV.c  PROGMAIN.c  (+25 more)
src/ADB/: ADBEMDEV.c  ADBSHARE.h
src/HW/ADB/: ADBEMDEV.c  ADBEMDEV.h  ADBSHARE.h
src/HW/DISK/: IWMEMDEV.c  IWMEMDEV.h  SONYEMDV.c  SONYEMDV.h
src/HW/KBRD/: ALTKEYSM.c  ALTKEYSM.h  KBRDEMDV.c  KBRDEMDV.h  KEYCODES.h
src/HW/M68K/: DISAM68K.c  DISAM68K.h  FPCPEMDV.c  FPMATHEM.h  M68KITAB.c  M68KITAB.h  MINEM68K.c  MINEM68K.h
src/HW/M68K_old/: M68KITAB.c  M68KITAB.h  MINEM68K.c  MINEM68K.h
src/HW/MOUSE/: MOUSEMDV.c  MOUSEMDV.h
src/HW/POWERMAN/: PMUEMDEV.c  PMUEMDEV.h
src/HW/RAM/: RAMADDR.h
src/HW/ROM/: ROMEMDEV.c  ROMEMDEV.h
src/HW/RTC/: RTCEMDEV.c  RTCEMDEV.h
src/HW/SCC/: SCCEMDEV.c  SCCEMDEV.h
src/HW/SCREEN/: SCRNEMDV.c  SCRNEMDV.h  SCRNMAPR.c  SCRNMAPR.h  SCRNTRNS.h
src/HW/SCSI/: SCSIEMDV.c  SCSIEMDV.h
src/HW/SOUND/: ASCEMDEV.c  ASCEMDEV.h  SGLUALSA.h  SGLUDDSP.h  SNDEMDEV.c  SNDEMDEV.h
src/HW/VIA/: VIA notes.md  VIA2EMDV.c  VIA2EMDV.h  VIAEMDEV.c  VIAEMDEV.h
src/HW/VIDCARD/: VIDEMDEV.c  VIDEMDEV.h
src/LANG/: INTLCHAR.c  INTLCHAR.h
src/M68K/: DISAM68K.c  DISAM68K.h  M68KITAB.c  M68KITAB.h  MINEM68K.c  MINEM68K.h
src/PATCHES/: HPMCHACK.h  ROMEMDEV.c  ROMEMDEV.h  SCRNHACK.c  SCRNHACK.h  SONYDRV.c  SONYDRV.h
src/POWERMAN/: PMUEMDEV.c
src/UI/: COMOSGLU.c  COMOSGLU.h  CONFIGM.c  CONFIGM.h  CONTROLM.c  CONTROLM.h  MYOSGLUE.h  OSGLUCCO.m  OSGLUNDS.c
src/UI/MACOSX/: OSGLUCCO.m  (+1 more)
src/UTIL/: BPFILTER.h  DATE2SEC.c  DATE2SEC.h  ENDIANAC.h  PBUFSTDC.h
(+45 files in other folders)
